# ebay_scrapper

./: pyproject.toml
src/: GPU_list.csv  main.py
