[tool.poetry]
name = "amazon-cpu-scrapper"
version = "0.1.0"
description = ""
authors = ["Dandark <dandarkblyat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.2"
beautifulsoup4 = "^4.12.3"
pytest = "^8.2.1"
lxml = "^5.2.2"
selenium = "^4.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
